--- a/SocialFusion/Class/NewFeedPhotoCell.xib
+++ b/SocialFusion/Class/NewFeedPhotoCell.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2177</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1173</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITextView</string>
@@ -47,6 +47,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{289, 217}</string>
 								<reference key="NSSuperview" ref="1013684620"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="630536754"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,7 +58,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{289, 217}</string>
 								<reference key="NSSuperview" ref="1013684620"/>
-								<string key="NSReuseIdentifierKey">_NS:225</string>
+								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -88,7 +89,7 @@
 						</array>
 						<string key="NSFrame">{{9, 49}, {289, 217}}</string>
 						<reference key="NSSuperview" ref="156024869"/>
-						<string key="NSReuseIdentifierKey">_NS:196</string>
+						<reference key="NSWindow"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="24950055">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -106,6 +107,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{-14, 0}, {320, 50}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1032182944"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -119,6 +121,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 3}, {34, 34}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="476670876"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -128,6 +131,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 3}, {34, 34}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1012924412"/>
 								<reference key="IBUIBackgroundColor" ref="24950055"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -153,6 +157,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{47, 3}, {67, 34}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="109743227"/>
 								<reference key="IBUIBackgroundColor" ref="24950055"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -169,42 +174,12 @@
 								<reference key="IBUIFontDescription" ref="521506468"/>
 								<reference key="IBUIFont" ref="933203324"/>
 							</object>
-							<object class="IBUIButton" id="393285137">
-								<reference key="NSNextResponder" ref="814050697"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{266, -2}, {44, 44}}</string>
-								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSNextKeyView" ref="885408502"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
-								<reference key="IBUIHighlightedTitleColor" ref="484760707"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="8379662"/>
-								<object class="NSCustomResource" key="IBUINormalImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">btn_repost.png</string>
-								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="444568277">
-									<int key="type">2</int>
-									<double key="pointSize">12</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="795560018">
-									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">12</double>
-									<int key="NSfFlags">16</int>
-								</object>
-							</object>
 							<object class="IBUIButton" id="219290315">
 								<reference key="NSNextResponder" ref="814050697"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{178, -2}, {94, 44}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="656811951"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -217,15 +192,23 @@
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="8379662"/>
-								<reference key="IBUIFontDescription" ref="444568277"/>
-								<reference key="IBUIFont" ref="795560018"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">2</int>
+									<double key="pointSize">12</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="933284696">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">12</double>
+									<int key="NSfFlags">16</int>
+								</object>
 							</object>
 							<object class="IBUILabel" id="656811951">
 								<reference key="NSNextResponder" ref="814050697"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{180, 10}, {80, 20}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
-								<reference key="NSNextKeyView" ref="393285137"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC43MzMzMzMzMzMzIDAuNzI1NDkwMTk2MSAwLjYxMTc2NDcwNTkgMAA</bytes>
@@ -250,13 +233,14 @@
 									<int key="traits">2</int>
 									<double key="pointSize">12</double>
 								</object>
-								<reference key="IBUIFont" ref="795560018"/>
+								<reference key="IBUIFont" ref="933284696"/>
 							</object>
 							<object class="IBUILabel" id="109743227">
 								<reference key="NSNextResponder" ref="814050697"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{55, 10}, {141, 20}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="219290315"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -292,6 +276,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{3, -2}, {45, 45}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="825501182"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -303,6 +288,7 @@
 						</array>
 						<string key="NSFrameSize">{306, 40}</string>
 						<reference key="NSSuperview" ref="156024869"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="403529527"/>
 						<reference key="IBUIBackgroundColor" ref="24950055"/>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -313,7 +299,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 270}, {288, 65}}</string>
 						<reference key="NSSuperview" ref="156024869"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<reference key="NSWindow"/>
 						<reference key="IBUIBackgroundColor" ref="24950055"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -337,6 +323,7 @@
 				</array>
 				<string key="NSFrameSize">{306, 342}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="814050697"/>
 				<reference key="IBUIBackgroundColor" ref="24950055"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -386,11 +373,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">imageView</string>
+						<string key="label">_photoView</string>
 						<reference key="source" ref="156024869"/>
 						<reference key="destination" ref="885408502"/>
 					</object>
-					<int key="connectionID">15</int>
+					<int key="connectionID">37</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -418,15 +405,6 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">18</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">repost:</string>
-						<reference key="source" ref="393285137"/>
-						<reference key="destination" ref="156024869"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">20</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -473,7 +451,6 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="1012924412"/>
 							<reference ref="219290315"/>
-							<reference ref="393285137"/>
 							<reference ref="403529527"/>
 							<reference ref="825501182"/>
 							<reference ref="656811951"/>
@@ -496,11 +473,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
 						<reference key="object" ref="476670876"/>
-						<reference key="parent" ref="814050697"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">10</int>
-						<reference key="object" ref="393285137"/>
 						<reference key="parent" ref="814050697"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -558,7 +530,6 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -579,19 +550,77 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">36</int>
+			<int key="maxID">37</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">NewFeedPhotoCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="didClickImageView:">id</string>
+						<string key="repost:">id</string>
+						<string key="selectUser:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="didClickImageView:">
+							<string key="name">didClickImageView:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="repost:">
+							<string key="name">repost:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="selectUser:">
+							<string key="name">selectUser:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="_headFrameImageView">UIImageView</string>
+						<string key="_headImageView">UIImageView</string>
+						<string key="_photoView">UIImageView</string>
+						<string key="_userNameLabel">UILabel</string>
+						<string key="captainLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="_headFrameImageView">
+							<string key="name">_headFrameImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="_headImageView">
+							<string key="name">_headImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="_photoView">
+							<string key="name">_photoView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="_userNameLabel">
+							<string key="name">_userNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="captainLabel">
+							<string key="name">captainLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NewFeedPhotoCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="btn_repost.png">{20, 20}</string>
 			<string key="detail_head.png">{51, 51}</string>
 			<string key="detail_header_bg@2x.png">{640, 100}</string>
 			<string key="head_renren.png">{44, 44}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1173</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
