--- a/SocialFusion/Class/NewFeedPhotoCell.xib
+++ b/SocialFusion/Class/NewFeedPhotoCell.xib
@@ -48,7 +48,7 @@
 								<string key="NSFrameSize">{289, 217}</string>
 								<reference key="NSSuperview" ref="1013684620"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="630536754"/>
+								<reference key="NSNextKeyView" ref="68940427"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -59,6 +59,7 @@
 								<string key="NSFrameSize">{289, 217}</string>
 								<reference key="NSSuperview" ref="1013684620"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="630536754"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -90,6 +91,7 @@
 						<string key="NSFrame">{{9, 49}, {289, 217}}</string>
 						<reference key="NSSuperview" ref="156024869"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="885408502"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="24950055">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -208,7 +210,7 @@
 								<string key="NSFrame">{{180, 10}, {80, 20}}</string>
 								<reference key="NSSuperview" ref="814050697"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="1013684620"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC43MzMzMzMzMzMzIDAuNzI1NDkwMTk2MSAwLjYxMTc2NDcwNTkgMAA</bytes>
@@ -300,16 +302,18 @@
 						<string key="NSFrame">{{9, 270}, {288, 65}}</string>
 						<reference key="NSSuperview" ref="156024869"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<reference key="IBUIBackgroundColor" ref="24950055"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIEditable">NO</bool>
-						<string key="IBUIText">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+						<string key="IBUIText">Lorem ipsum dolor sit er elit lamet, consectetaur cilliuml amet, consectetaur cillium consectetaur consectetaur consectetaur consectetaur</string>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<int key="IBUIAutocapitalizationType">2</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
+						<int key="IBUIDataDetectorTypes">11</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
